          The "Install" button turns to a disabled state when no extensions are marked for installation
* BUGFIX: AccountService is only queried when we are logged in. The login state is saved internally
* BUGFIX: Process undo steps are now reset when a new process is opened
* BUGFIX: Using undo in a subprocess will no longer reset the view to the top-level of the process
* BUGFIX: The welcome perspective now updates the recent files list, so opening a process via it now opens the correct selected process
* BUGFIX: Drag&Drop from the OS to the RapidMiner Process design canvas now also works for .xlsx files
* BUGFIX: Fixed several repository problems when trying to overwrite entries with themselves
* BUGFIX: UpdateDialog: Purchase link now changes to "install" after logging in and the purchase button now redirects to the extension website
* BUGFIX: Generate Aggregation operator can now handle the case of zero matching attributes
* BUGFIX: Fixed several key shortcuts that worked in the wrong perspective. For example, it is no longer possible to delete operators while in the result perspective
* BUGFIX: Drag&Drop of files (e.g. .csv/.xls) creates the corresponding read operator with the now correct filename parameter
* BUGFIX: Drag&Drop of operators should no longer create operators halfway outside the process canvas
* BUGFIX: Import wizards will no longer overwrite existing data without asking for permission first
* BUGFIX: Import wizards will no longer accept wrong file types/invalid filenames in the first step
* BUGFIX: Read SAS operator no longer causes an internal error when the data file could not be read
* BUGFIX: "Wiki" links in the documentation tried to open a tutorial process, now open the corresponding wiki page
* BUGFIX: Macro Editor will now remember entered values without having to press enter
* BUGFIX: Opening the context menu on result tables will no longer deselect the currently selected cells