@@ -336,12 +336,12 @@ gui.dialog.example_visualizer_dialog.icon    = table_row.png
 
 gui.action.text_dialog.enlarge.label	= Enlarge
 gui.action.text_dialog.enlarge.icon		= elements.png
-gui.action.text_dialog.enlarge.mne		= E
+gui.action.text_dialog.enlarge.mne		= R
 gui.action.text_dialog.enlarge.tip		= Makes this dialog bigger.
 
 gui.action.text_dialog.shrink.label		= Shrink
 gui.action.text_dialog.shrink.icon		= elements.png
-gui.action.text_dialog.shrink.mne		= S
+gui.action.text_dialog.shrink.mne		= R
 gui.action.text_dialog.shrink.tip		= Fits this dialog to its original size.
 
 
@@ -502,6 +502,7 @@ gui.action.undo.acc   = control Z
 gui.action.redo.label = Redo
 gui.action.redo.mne   = R
 gui.action.redo.icon  = redo.png
+gui.action.redo.acc   = control Y
 gui.action.redo.tip   = Redo back the last action.
 
 gui.action.new_operator.label = New Operator...
