@@ -343,9 +343,6 @@ public class Actions implements ProcessEditor {
 	/** The currently selected operator will be deleted. */
 	public void delete() {
 		Operator parent = null;
-//		if(!mainFrame.isProcessRendererFocused()) {
-//			return;
-//		}
 		for (Operator selectedOperator : new LinkedList<Operator>(getSelectedOperators())) {				
 			if (parent == null) {
 				parent = selectedOperator.getParent();
