@@ -79,7 +79,8 @@ public class ProcessPanel extends JPanel implements Dockable, ProcessEditor {
 		autoWireDropDownButton.add(new AutoWireAction(mainFrame, "rewire_recursive", CompatibilityLevel.PRE_VERSION_5, true, false));
 		autoWireDropDownButton.addToToolBar(toolBar, ViewToolBar.RIGHT);
 		toolBar.add(renderer.getFlowVisualizer().SHOW_ORDER_TOGGLEBUTTON, ViewToolBar.RIGHT);
-		toolBar.add(renderer.ARRANGE_OPERATORS_ACTION, ViewToolBar.RIGHT);
+		//TODO: disabled action until RM-150 is fixed
+//		toolBar.add(renderer.ARRANGE_OPERATORS_ACTION, ViewToolBar.RIGHT);
 		toolBar.add(renderer.AUTO_FIT_ACTION, ViewToolBar.RIGHT);
 		JToggleButton toggleRealMetadataPropagationButton = new JToggleButton(mainFrame.PROPAGATE_REAL_METADATA_ACTION);
 		toggleRealMetadataPropagationButton.setText("");
